# matterbridge

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: README.md  curtain.py  doorlock.py  fan.py  light.py  plugpower.py  sensors.py  thermostat.py
src/: lib.rs
